feat: adicionando folha de estilos - ref #3

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Hello Word!</title>
+    <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
     <h1>Hello word!</h1>
-    <p>Essa é a primeira pagina no meu novo repositorio do Git</p>
+    <p>Essa é a primeira pagina do meu novo repositorio do Git</p>
 </body>
 </html>
