--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 <body>
     <h1>Hello word!</h1>
     <p>Essa é a primeira pagina do meu novo repositorio do Git</p>
+    <p>Lista de Produtos disponíveis:</p>
+    <ul>
+        <li>Arroz</li>
+        <li>Feijão</li>
+        <li>Macarrão</li>
+        <li>Carne</li>
+    </ul>
 </body>
 </html>
