--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello Word!</title>
+    <title>NaveTech</title>
     <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
-    <h1>Hello word!</h1>
-    <p>Essa é a primeira pagina do meu novo repositorio do Git</p>
-    <p>Lista de Produtos disponíveis:</p>
+    <h1>Bem Vindo!</h1>
+    <div>
+    <img
+    src="https://nloja.com/pt/img/loja-responsiva.png"
+    alt="Loja de vendas"
+    />
+   </div>
+    <p>Bem vindo ao site da loja NaveTech.</p>
+    <p>Na NaveTech.br, você encontra variedades de produtos eletrônicos em computadores, celulares, TVs, pc gamers, tablets e mais com os melhores preços.</p>
+    <h4><p>Lista de Produtos disponíveis:</p></h3>
     <ul>
         <li>Arroz</li>
         <li>Feijão</li>
@@ -15,4 +22,7 @@
         <li>Carne</li>
     </ul>
 </body>
+<footer>
+    <p>Loja NaveTech &copy; 2024</p>
+</footer>
 </html>
