--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello Word!</title>
+    <title>NaveTech</title>
     <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
-    <h1>Hello word!</h1>
-    <p>Essa é a primeira pagina do meu novo repositorio do Git</p>
+    <h1>Bem Vindo!</h1>
+    <div>
+    <img
+    src="https://nloja.com/pt/img/loja-responsiva.png"
+    alt="Loja de vendas"
+    />
+   </div>
+    <p>Bem vindo ao site da loja NaveTech.</p>
+    <p>Na NaveTech.br, você encontra variedades de produtos eletrônicos em computadores, celulares, TVs, pc gamers, tablets e mais com os melhores preços.</p>
+    <h4><p>Lista de Produtos disponíveis:</p></h3>
+    <ul>
+        <li>Computadores: O computador é uma máquina eletrônica que permite processar dados.</li>
+        <li>Celulares: É um telefone portátil que pode fazer e receber chamadas através de um link de radiofrequência enquanto o usuário está se movendo dentro de uma área de serviço telefônico.</li>
+        <li>TVs: Aparelho que faz a transmissão à distância, por meio de sinais eletromagnéticos, de imagens geradas ao vivo, ou não.</li>
+        <li>PC gamers: É um computador pessoal especialmente projetado para jogos de vídeo</li>
+        <li>Tablets: É um dispositivo portátil que possui uma variedade de funções semelhantes a um computador.</li>
+    </ul>
 </body>
+<footer>
+    <p>Loja NaveTech &copy; 2024</p>
+</footer>
 </html>
